syntax = "proto3";

package geolocation;

service GeolocationService {
    rpc UpdateLocation(Location) returns (Empty) {}
    rpc GetLocation(Empty) returns (LocationResponse) {}
    rpc ShareLocation (LocationRequest) returns (Empty) {}
}

message Empty {}

message Location {
    double longitude = 1;
    double latitude = 2;
    string userID = 3;
    int64 updatedAt = 4;
    repeated string sharedIDs = 5;
}

message LocationResponse {
    repeated Location locations = 1;
}

message LocationRequest {
    string userID = 1;
    int32 isRemove = 2;
}

message LocationInfo {}
